@@ -43,7 +43,7 @@ static int msr3_pack_mseed2 (const MS3Record *msr, void (*record_handler) (char 
 
 static int msr_pack_data (void *dest, void *src, int maxsamples, int maxdatabytes,
                           char sampletype, int8_t encoding, int8_t swapflag,
-                          uint16_t *byteswritten, const char *sid, int8_t verbose);
+                          uint32_t *byteswritten, const char *sid, int8_t verbose);
 
 static int ms_genfactmult (double samprate, int16_t *factor, int16_t *multiplier);
 
@@ -162,18 +162,18 @@ msr3_pack_mseed3 (const MS3Record *msr, void (*record_handler) (char *, int, voi
   int dataoffset = 0;
 
   int samplesize;
-  int maxdatabytes;
-  int maxsamples;
+  uint32_t maxdatabytes;
+  uint32_t maxsamples;
   int recordcnt = 0;
   int packsamples;
   int packoffset;
   int64_t totalpackedsamples;
-  int32_t reclen;
-  int32_t maxreclen;
-  int8_t encoding;
+  uint32_t reclen;
+  uint32_t maxreclen;
+  uint8_t encoding;
 
   uint32_t crc;
-  uint16_t datalength;
+  uint32_t datalength;
   nstime_t nextstarttime;
   uint16_t year;
   uint16_t day;
@@ -195,12 +195,12 @@ msr3_pack_mseed3 (const MS3Record *msr, void (*record_handler) (char *, int, voi
   }
 
   /* Use default record length and encoding if needed */
-  maxreclen = (msr->reclen == -1) ? MS_PACK_DEFAULT_RECLEN : msr->reclen;
-  encoding = (msr->encoding == -1) ? MS_PACK_DEFAULT_ENCODING : msr->encoding;
+  maxreclen = (msr->reclen < 0) ? MS_PACK_DEFAULT_RECLEN : msr->reclen;
+  encoding = (msr->encoding < 0) ? MS_PACK_DEFAULT_ENCODING : msr->encoding;
 
   if (maxreclen < (MS3FSDH_LENGTH + strlen(msr->sid) + msr->extralength))
   {
-    ms_log (2, "%s: Record length (%d) is not large enough for header (%d), SID (%"PRIsize_t"), and extra (%d)\n",
+    ms_log (2, "%s: Record length (%u) is not large enough for header (%u), SID (%"PRIsize_t"), and extra (%d)\n",
             msr->sid, maxreclen, MS3FSDH_LENGTH, strlen(msr->sid), msr->extralength);
     return -1;
   }
@@ -328,7 +328,7 @@ msr3_pack_mseed3 (const MS3Record *msr, void (*record_handler) (char *, int, voi
     *pMS3FSDH_CRC(rawrec) = HO4u (crc, swapflag);
 
     if (verbose >= 1)
-      ms_log (0, "%s: Packed %d samples into %d byte record\n", msr->sid, packsamples, reclen);
+      ms_log (0, "%s: Packed %d samples into %u byte record\n", msr->sid, packsamples, reclen);
 
     /* Send record to handler */
     record_handler (rawrec, reclen, handlerdata);
@@ -454,7 +454,7 @@ msr3_repack_mseed3 (const MS3Record *msr, char *record, uint32_t recbuflen,
 
   /* Update number of samples and data length */
   *pMS3FSDH_NUMSAMPLES(record) = HO4u ((uint32_t)msr->samplecnt, swapflag);
-  *pMS3FSDH_DATALENGTH(record) = HO2u (origdatasize, swapflag);
+  *pMS3FSDH_DATALENGTH(record) = HO4u (origdatasize, swapflag);
 
   /* Calculate CRC (with CRC field set to 0) and set */
   memset (pMS3FSDH_CRC(record), 0, sizeof(uint32_t));
@@ -594,21 +594,21 @@ msr3_pack_mseed2 (const MS3Record *msr, void (*record_handler) (char *, int, voi
   char *rawrec = NULL;
   char *encoded = NULL;  /* Separate encoded data buffer for alignment */
   int8_t swapflag;
-  int32_t reclen;
-  int8_t encoding;
+  uint32_t reclen;
+  uint8_t encoding;
   int dataoffset = 0;
   int headerlen;
-  int content;
+  uint32_t content;
 
   int samplesize;
-  int maxdatabytes;
-  int maxsamples;
+  uint32_t maxdatabytes;
+  uint32_t maxsamples;
   int recordcnt = 0;
   int packsamples;
   int packoffset;
   int64_t totalpackedsamples;
 
-  uint16_t datalength;
+  uint32_t datalength;
   nstime_t nextstarttime;
   uint16_t year;
   uint16_t day;
@@ -630,12 +630,12 @@ msr3_pack_mseed2 (const MS3Record *msr, void (*record_handler) (char *, int, voi
   }
 
   /* Use default record length and encoding if needed */
-  reclen = (msr->reclen == -1) ? MS_PACK_DEFAULT_RECLEN : msr->reclen;
-  encoding = (msr->encoding == -1) ? MS_PACK_DEFAULT_ENCODING : msr->encoding;
+  reclen = (msr->reclen < 0) ? MS_PACK_DEFAULT_RECLEN : msr->reclen;
+  encoding = (msr->encoding < 0) ? MS_PACK_DEFAULT_ENCODING : msr->encoding;
 
   if (reclen < 128)
   {
-    ms_log (2, "%s: Record length (%d) is not large enough, must be >= 128 bytes\n",
+    ms_log (2, "%s: Record length (%u) is not large enough, must be >= 128 bytes\n",
             msr->sid, reclen);
     return -1;
   }
@@ -644,7 +644,7 @@ msr3_pack_mseed2 (const MS3Record *msr, void (*record_handler) (char *, int, voi
    * Power of two if (X & (X - 1)) == 0 */
   if ((reclen & (reclen - 1)) != 0)
   {
-    ms_log (2, "%s: Cannot create miniSEED 2, record length (%d) is not a power of 2\n",
+    ms_log (2, "%s: Cannot create miniSEED 2, record length (%u) is not a power of 2\n",
             msr->sid, reclen);
     return -1;
   }
@@ -679,7 +679,7 @@ msr3_pack_mseed2 (const MS3Record *msr, void (*record_handler) (char *, int, voi
     memset (rawrec + headerlen, 0, reclen - headerlen);
 
     if (verbose >= 1)
-      ms_log (0, "%s: Packed %d byte record with no payload\n", msr->sid, reclen);
+      ms_log (0, "%s: Packed %u byte record with no payload\n", msr->sid, reclen);
 
     /* Send record to handler */
     record_handler (rawrec, reclen, handlerdata);
@@ -783,7 +783,7 @@ msr3_pack_mseed2 (const MS3Record *msr, void (*record_handler) (char *, int, voi
       memset (rawrec + content, 0, reclen - content);
 
     if (verbose >= 1)
-      ms_log (0, "%s: Packed %d samples into %d byte record\n", msr->sid, packsamples, reclen);
+      ms_log (0, "%s: Packed %d samples into %u byte record\n", msr->sid, packsamples, reclen);
 
     /* Send record to handler */
     record_handler (rawrec, reclen, handlerdata);
@@ -848,8 +848,8 @@ msr3_pack_header2 (const MS3Record *msr, char *record, uint32_t recbuflen, int8_
 {
   int written = 0;
   int8_t swapflag;
-  int32_t reclen;
-  int8_t encoding;
+  uint32_t reclen;
+  uint8_t encoding;
 
   char network[64];
   char station[64];
@@ -865,8 +865,8 @@ msr3_pack_header2 (const MS3Record *msr, char *record, uint32_t recbuflen, int8_
   uint16_t fsec;
   int8_t msec_offset;
 
-  int reclenexp = 0;
-  int reclenfind;
+  uint32_t reclenexp = 0;
+  uint32_t reclenfind;
   int16_t factor;
   int16_t multiplier;
   uint16_t *next_blockette = NULL;
@@ -894,12 +894,12 @@ msr3_pack_header2 (const MS3Record *msr, char *record, uint32_t recbuflen, int8_
   }
 
   /* Use default record length and encoding if needed */
-  reclen = (msr->reclen == -1) ? MS_PACK_DEFAULT_RECLEN : msr->reclen;
-  encoding = (msr->encoding == -1) ? MS_PACK_DEFAULT_ENCODING : msr->encoding;
+  reclen = (msr->reclen < 0) ? MS_PACK_DEFAULT_RECLEN : msr->reclen;
+  encoding = (msr->encoding < 0) ? MS_PACK_DEFAULT_ENCODING : msr->encoding;
 
   if (reclen < 128 || reclen > MAXRECLEN)
   {
-    ms_log (2, "%s: Record length is out of range: %d\n", msr->sid, reclen);
+    ms_log (2, "%s: Record length is out of range: %u\n", msr->sid, reclen);
     return -1;
   }
 
@@ -907,7 +907,7 @@ msr3_pack_header2 (const MS3Record *msr, char *record, uint32_t recbuflen, int8_
    * Power of two if (X & (X - 1)) == 0 */
   if ((reclen & (reclen - 1)) != 0)
   {
-    ms_log (2, "%s: Cannot pack miniSEED 2, record length (%d) is not a power of 2\n",
+    ms_log (2, "%s: Cannot pack miniSEED 2, record length (%u) is not a power of 2\n",
             msr->sid, reclen);
     return -1;
   }
@@ -1581,7 +1581,7 @@ msr3_pack_header2 (const MS3Record *msr, char *record, uint32_t recbuflen, int8_
 static int
 msr_pack_data (void *dest, void *src, int maxsamples, int maxdatabytes,
                char sampletype, int8_t encoding, int8_t swapflag,
-               uint16_t *byteswritten, const char *sid, int8_t verbose)
+               uint32_t *byteswritten, const char *sid, int8_t verbose)
 {
   int nsamples;
 
